--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -15,14 +15,125 @@ features:
   categorical:
   numerical:
   drop_columns: []
+  add_missing_count: true
+  missing_threshold: 0.4
+  categorical_drop:
+    - NAME_TYPE_SUITE
+    - OCCUPATION_TYPE
+    - ORGANIZATION_TYPE
+  selected_columns:
+    - CNT_CHILDREN
+    - AMT_INCOME_TOTAL
+    - AMT_CREDIT
+    - AMT_ANNUITY
+    - AMT_GOODS_PRICE
+    - REGION_POPULATION_RELATIVE
+    - DAYS_BIRTH
+    - DAYS_EMPLOYED
+    - DAYS_REGISTRATION
+    - DAYS_ID_PUBLISH
+    - FLAG_MOBIL
+    - FLAG_EMP_PHONE
+    - FLAG_WORK_PHONE
+    - FLAG_CONT_MOBILE
+    - FLAG_PHONE
+    - FLAG_EMAIL
+    - CNT_FAM_MEMBERS
+    - REGION_RATING_CLIENT
+    - REGION_RATING_CLIENT_W_CITY
+    - HOUR_APPR_PROCESS_START
+    - REG_REGION_NOT_LIVE_REGION
+    - REG_REGION_NOT_WORK_REGION
+    - LIVE_REGION_NOT_WORK_REGION
+    - REG_CITY_NOT_LIVE_CITY
+    - REG_CITY_NOT_WORK_CITY
+    - LIVE_CITY_NOT_WORK_CITY
+    - EXT_SOURCE_2
+    - EXT_SOURCE_3
+    - OBS_30_CNT_SOCIAL_CIRCLE
+    - DEF_30_CNT_SOCIAL_CIRCLE
+    - OBS_60_CNT_SOCIAL_CIRCLE
+    - DEF_60_CNT_SOCIAL_CIRCLE
+    - DAYS_LAST_PHONE_CHANGE
+    - FLAG_DOCUMENT_2
+    - FLAG_DOCUMENT_3
+    - FLAG_DOCUMENT_4
+    - FLAG_DOCUMENT_5
+    - FLAG_DOCUMENT_6
+    - FLAG_DOCUMENT_7
+    - FLAG_DOCUMENT_8
+    - FLAG_DOCUMENT_9
+    - FLAG_DOCUMENT_10
+    - FLAG_DOCUMENT_11
+    - FLAG_DOCUMENT_12
+    - FLAG_DOCUMENT_13
+    - FLAG_DOCUMENT_14
+    - FLAG_DOCUMENT_15
+    - FLAG_DOCUMENT_16
+    - FLAG_DOCUMENT_17
+    - FLAG_DOCUMENT_18
+    - FLAG_DOCUMENT_19
+    - FLAG_DOCUMENT_20
+    - FLAG_DOCUMENT_21
+    - AMT_REQ_CREDIT_BUREAU_HOUR
+    - AMT_REQ_CREDIT_BUREAU_DAY
+    - AMT_REQ_CREDIT_BUREAU_WEEK
+    - AMT_REQ_CREDIT_BUREAU_MON
+    - AMT_REQ_CREDIT_BUREAU_QRT
+    - AMT_REQ_CREDIT_BUREAU_YEAR
+    - missing_count
+    - NAME_CONTRACT_TYPE_Cash loans
+    - NAME_CONTRACT_TYPE_Revolving loans
+    - CODE_GENDER_F
+    - CODE_GENDER_M
+    - CODE_GENDER_XNA
+    - FLAG_OWN_CAR_N
+    - FLAG_OWN_CAR_Y
+    - FLAG_OWN_REALTY_N
+    - FLAG_OWN_REALTY_Y
+    - NAME_INCOME_TYPE_Businessman
+    - NAME_INCOME_TYPE_Commercial associate
+    - NAME_INCOME_TYPE_Maternity leave
+    - NAME_INCOME_TYPE_Pensioner
+    - NAME_INCOME_TYPE_State servant
+    - NAME_INCOME_TYPE_Student
+    - NAME_INCOME_TYPE_Unemployed
+    - NAME_INCOME_TYPE_Working
+    - NAME_EDUCATION_TYPE_Academic degree
+    - NAME_EDUCATION_TYPE_Higher education
+    - NAME_EDUCATION_TYPE_Incomplete higher
+    - NAME_EDUCATION_TYPE_Lower secondary
+    - NAME_EDUCATION_TYPE_Secondary / secondary special
+    - NAME_FAMILY_STATUS_Civil marriage
+    - NAME_FAMILY_STATUS_Married
+    - NAME_FAMILY_STATUS_Separated
+    - NAME_FAMILY_STATUS_Single / not married
+    - NAME_FAMILY_STATUS_Unknown
+    - NAME_FAMILY_STATUS_Widow
+    - NAME_HOUSING_TYPE_Co-op apartment
+    - NAME_HOUSING_TYPE_House / apartment
+    - NAME_HOUSING_TYPE_Municipal apartment
+    - NAME_HOUSING_TYPE_Office apartment
+    - NAME_HOUSING_TYPE_Rented apartment
+    - NAME_HOUSING_TYPE_With parents
+    - WEEKDAY_APPR_PROCESS_START_FRIDAY
+    - WEEKDAY_APPR_PROCESS_START_MONDAY
+    - WEEKDAY_APPR_PROCESS_START_SATURDAY
+    - WEEKDAY_APPR_PROCESS_START_SUNDAY
+    - WEEKDAY_APPR_PROCESS_START_THURSDAY
+    - WEEKDAY_APPR_PROCESS_START_TUESDAY
+    - WEEKDAY_APPR_PROCESS_START_WEDNESDAY
 
 training:
   test_size: 0.2
-  random_state: 7
+  random_state: 42
   class_weight: balanced
   n_jobs: -1
   use_gpu: false
   early_stopping_rounds:
+  use_smote: true
+  smote_sampling_strategy: 0.2
+  downsample_majority: true
 
 model:
   type: xgboost
