--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pandas>=2.0,<3.0
 numpy>=1.24,<3.0
 scikit-learn>=1.3,<2.0
+imbalanced-learn>=0.14,<0.15
 xgboost>=1.7,<2.0
 mlflow>=2.9,<3.0
 dvc>=3.0,<4.0
