Added a snippet for tausif

--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -39,6 +39,9 @@ features:
     - DAYS_EMPLOYED
     - DAYS_EMPLOYED_ANOM
     - DAYS_EMPLOYED_REPLACED
+    - AGE_YEARS
+    - EMPLOYED_YEARS
+    - EMPLOYMENT_YEARS_TO_AGE
     - DAYS_REGISTRATION
     - DAYS_ID_PUBLISH
     - FLAG_MOBIL
@@ -62,6 +65,7 @@ features:
     - EXT_SOURCE_1_IS_MISSING
     - EXT_SOURCE_2_IS_MISSING
     - EXT_SOURCE_3_IS_MISSING
+    - TOT_MISSING_COUNT
     - OBS_30_CNT_SOCIAL_CIRCLE
     - DEF_30_CNT_SOCIAL_CIRCLE
     - OBS_60_CNT_SOCIAL_CIRCLE
@@ -94,6 +98,15 @@ features:
     - AMT_REQ_CREDIT_BUREAU_QRT
     - AMT_REQ_CREDIT_BUREAU_YEAR
     - missing_count
+    - PAYMENT_RATE
+    - CREDIT_TO_INCOME
+    - ANNUITY_TO_INCOME
+    - GOODS_TO_CREDIT
+    - INCOME_PER_PERSON
+    - CHILDREN_RATIO
+    - DOC_COUNT
+    - CONTACT_COUNT
+    - ADDR_MISMATCH_SUM
     - OWN_CAR_AGE_IS_MISSING
     - NAME_CONTRACT_TYPE_Cash loans
     - NAME_CONTRACT_TYPE_Revolving loans
