--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ mlflow>=2.9,<3.0
 dvc>=3.0,<4.0
 pyyaml>=6.0,<7.0
 duckdb>=0.9,<2.0
+matplotlib>=3.7,<4.0
+pytest>=7.4,<9.0
+fastapi>=0.111,<0.120
+uvicorn[standard]>=0.34,<0.35
+httpx>=0.27,<0.29
