Multi step dvc dag

--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -3,6 +3,9 @@ paths:
   model_filename: baseline_model.joblib
   metrics_file: reports/metrics.json
   reports_dir: reports
+  feature_store_path: data/processed/feature_store.parquet
+  train_set_path: data/processed/train.parquet
+  test_set_path: data/processed/test.parquet
 
 data:
   raw_path: data/raw/application_train.csv
