--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas>=2.0,<3.0
-numpy>=1.24,<3.0
+numpy>=1.24,<2.0
 scikit-learn>=1.3,<2.0
 imbalanced-learn>=0.14,<0.15
 xgboost>=1.7,<2.0
@@ -13,3 +13,4 @@ fastapi>=0.111,<0.120
 uvicorn[standard]>=0.34,<0.35
 httpx>=0.27,<0.29
 pyarrow>=15.0,<18.0
+pandera>=0.18,<0.20
