--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,6 +1,6 @@
 stages:
   build_feature_store:
-    cmd: python -m creditrisk.pipelines.build_feature_store --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.build_feature_store --config configs/baseline.yaml
     deps:
       - configs/baseline.yaml
       - src/creditrisk/config.py
@@ -22,7 +22,7 @@ stages:
       - data/processed/feature_store.parquet
 
   split_data:
-    cmd: python -m creditrisk.pipelines.split_data --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.split_data --config configs/baseline.yaml
     deps:
       - configs/baseline.yaml
       - src/creditrisk/config.py
@@ -37,7 +37,7 @@ stages:
       - data/processed/test.parquet
 
   train_baseline:
-    cmd: python -m creditrisk.pipelines.train_baseline --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.train_baseline --config configs/baseline.yaml
     deps:
       - configs/baseline.yaml
       - src/creditrisk/config.py
@@ -63,3 +63,32 @@ stages:
       - models/baseline_model.joblib
       - reports/metrics.json
       - reports/evaluation
+
+  test_model:
+    cmd: python -X faulthandler -m creditrisk.testing.test_dataset --config configs/baseline.yaml --metrics-file reports/test_metrics.json --predictions-file reports/test_predictions.parquet --evaluation-dir reports/test_evaluation
+    deps:
+      - configs/baseline.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/testing/test_dataset.py
+      - src/creditrisk/data/datasets.py
+      - src/creditrisk/pipelines/data_workflow.py
+      - src/creditrisk/models/baseline.py
+      - src/creditrisk/utils/evaluation.py
+      - models/baseline_model.joblib
+      - data/processed/test.parquet
+    outs:
+      - reports/test_metrics.json
+      - reports/test_predictions.parquet
+      - reports/test_evaluation
+
+  validate_model:
+    cmd: python -X faulthandler -m creditrisk.testing.post_training --config configs/baseline.yaml --metrics-file reports/test_metrics.json --evaluation-dir reports/test_evaluation
+    deps:
+      - configs/baseline.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/testing/post_training.py
+      - reports/test_metrics.json
+      - reports/test_evaluation
+      - mlruns
+    outs:
+      - reports/post_training_validation.json
