--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,12 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
 
+      - name: Lint (ruff)
+        run: ruff check .
+
+      - name: Security scan (bandit)
+        run: bandit -q -r src
+
       - name: Static analysis
         run: |
           python -m compileall src tests
