--- a/configs/baseline.yaml
+++ b/configs/baseline.yaml
@@ -228,18 +228,18 @@ model:
 tracking:
   enabled: true
   tracking_uri: mlruns
-  experiment_name: baseline
-  run_name: baseline_xgboost
+  experiment_name: creditrisk_pd
+  run_name: creditrisk_pd_xgboost
   tags:
     project: credit-risk
-    stage: baseline
+    stage: pd-model
 
 inference:
   decision_threshold: 0.5
 
 registry:
   enabled: true
-  model_name: CreditRiskBaseline
+  model_name: CreditRiskPD
   stage_on_register: Staging
   promote_on_metric: roc_auc
   promote_min_value: 0.78
