--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -45,7 +49,10 @@ jobs:
         run: dvc pull
 
       - name: Run full pipeline
-        run: dvc repro train_baseline
+        run: dvc repro validate_model
+
+      - name: Generate drift monitoring artifacts
+        run: dvc repro monitor_drift
 
       - name: Promote model
         if: success()
@@ -55,6 +62,36 @@ jobs:
           else
             echo "Registry promotion report missing; skipping."
           fi
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push API image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile.api
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/creditrisk-api:latest
+            ghcr.io/${{ github.repository }}/creditrisk-api:${{ github.sha }}
+
+      - name: Build and push batch image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile.batch
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/creditrisk-batch:latest
+            ghcr.io/${{ github.repository }}/creditrisk-batch:${{ github.sha }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -68,3 +105,5 @@ jobs:
             reports/data_lineage.json
             reports/ingestion_summary.json
             reports/registry_promotion.json
+            reports/drift_report.json
+            reports/drift_report.html
