--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,6 @@ uvicorn[standard]>=0.34,<0.40
 httpx>=0.27,<0.29
 pyarrow>=22.0,<26.0
 pandera>=0.19,<0.27
+evidently>=0.4,<0.5
 ruff>=0.6,<1.0
 bandit>=1.7,<2.0
