--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ pandera>=0.19,<0.27
 evidently>=0.4,<0.5
 ruff>=0.6,<1.0
 bandit>=1.7,<2.0
+boto3>=1.34,<2.0
+azure-storage-blob>=12.19,<13.0
+kaggle>=1.6,<2.0
