--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,17 +1,17 @@
 stages:
   ingest_data:
-    cmd: python -X faulthandler -m creditrisk.pipelines.ingest_data --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.ingest_data --config configs/creditrisk_pd.yaml
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/pipelines/ingest_data.py
     outs:
       - reports/ingestion_summary.json
 
   build_feature_store:
-    cmd: python -X faulthandler -m creditrisk.pipelines.build_feature_store --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.build_feature_store --config configs/creditrisk_pd.yaml
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/data/datasets.py
       - src/creditrisk/features/feature_store.py
@@ -32,9 +32,9 @@ stages:
       - data/processed/feature_store.parquet
 
   split_data:
-    cmd: python -X faulthandler -m creditrisk.pipelines.split_data --config configs/baseline.yaml
+    cmd: python -X faulthandler -m creditrisk.pipelines.split_data --config configs/creditrisk_pd.yaml
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/data/datasets.py
       - src/creditrisk/pipelines/split_data.py
@@ -46,23 +46,22 @@ stages:
       - data/processed/train.parquet
       - data/processed/test.parquet
 
-  train_baseline:
-    cmd: python -X faulthandler -m creditrisk.pipelines.train_baseline --config configs/baseline.yaml
+  fit_model:
+    cmd: python -X faulthandler -m creditrisk.pipelines.train_creditrisk_pd --config configs/creditrisk_pd.yaml --skip-artifacts
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/data/datasets.py
       - src/creditrisk/features/preprocess.py
-      - src/creditrisk/models/baseline.py
-      - src/creditrisk/pipelines/train_baseline.py
+      - src/creditrisk/models/creditrisk_pd.py
+      - src/creditrisk/pipelines/train_creditrisk_pd.py
       - src/creditrisk/pipelines/data_workflow.py
-      - src/creditrisk/utils/evaluation.py
       - src/creditrisk/validation/contracts.py
       - src/creditrisk/validation/runner.py
       - data/processed/train.parquet
       - data/processed/test.parquet
     params:
-      - configs/baseline.yaml:
+      - configs/creditrisk_pd.yaml:
           - data.raw_path
           - data.target_column
           - training.test_size
@@ -70,21 +69,35 @@ stages:
           - training.class_weight
           - model.type
     outs:
-      - models/baseline_model.joblib
-      - reports/metrics.json
-      - reports/evaluation
+      - models/creditrisk_pd_model.joblib
 
-  test_model:
-    cmd: python -X faulthandler -m creditrisk.testing.test_dataset --config configs/baseline.yaml --metrics-file reports/test_metrics.json --predictions-file reports/test_predictions.parquet --evaluation-dir reports/test_evaluation
+  evaluate_train:
+    cmd: python -X faulthandler -m creditrisk.testing.test_dataset --config configs/creditrisk_pd.yaml --split train --skip-predictions
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/testing/test_dataset.py
       - src/creditrisk/data/datasets.py
       - src/creditrisk/pipelines/data_workflow.py
-      - src/creditrisk/models/baseline.py
+      - src/creditrisk/models/creditrisk_pd.py
       - src/creditrisk/utils/evaluation.py
-      - models/baseline_model.joblib
+      - models/creditrisk_pd_model.joblib
+      - data/processed/train.parquet
+    outs:
+      - reports/metrics.json
+      - reports/evaluation
+
+  evaluate_test:
+    cmd: python -X faulthandler -m creditrisk.testing.test_dataset --config configs/creditrisk_pd.yaml --split test --metrics-file reports/test_metrics.json --predictions-file reports/test_predictions.parquet --evaluation-dir reports/test_evaluation
+    deps:
+      - configs/creditrisk_pd.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/testing/test_dataset.py
+      - src/creditrisk/data/datasets.py
+      - src/creditrisk/pipelines/data_workflow.py
+      - src/creditrisk/models/creditrisk_pd.py
+      - src/creditrisk/utils/evaluation.py
+      - models/creditrisk_pd_model.joblib
       - data/processed/test.parquet
     outs:
       - reports/test_metrics.json
@@ -92,9 +105,9 @@ stages:
       - reports/test_evaluation
 
   validate_model:
-    cmd: python -X faulthandler -m creditrisk.testing.post_training --config configs/baseline.yaml --metrics-file reports/test_metrics.json --evaluation-dir reports/test_evaluation
+    cmd: python -X faulthandler -m creditrisk.testing.post_training --config configs/creditrisk_pd.yaml --metrics-file reports/test_metrics.json --evaluation-dir reports/test_evaluation
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/testing/post_training.py
       - reports/test_metrics.json
@@ -103,10 +116,43 @@ stages:
     outs:
       - reports/post_training_validation.json
 
-  monitor_drift:
-    cmd: python -X faulthandler -m creditrisk.monitoring.drift --config configs/baseline.yaml
+  register_model:
+    cmd: python -X faulthandler -m creditrisk.pipelines.auto_promote --config configs/creditrisk_pd.yaml --stage Production --report reports/registry_promotion.json --transition-log reports/registry_transition.json
     deps:
-      - configs/baseline.yaml
+      - configs/creditrisk_pd.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/pipelines/auto_promote.py
+      - src/creditrisk/mlops/registry.py
+      - reports/post_training_validation.json
+      - reports/registry_promotion.json
+      - reports/metrics.json
+      - reports/evaluation
+      - reports/test_metrics.json
+      - reports/test_evaluation
+      - reports/drift_report.json
+      - reports/drift_report.html
+      - reports/canary_report.json
+    outs:
+      - reports/registry_transition.json
+
+  deploy_manifest:
+    cmd: python -X faulthandler -m creditrisk.pipelines.deploy_manifest --config configs/creditrisk_pd.yaml --output reports/deploy_manifest.json
+    deps:
+      - configs/creditrisk_pd.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/pipelines/deploy_manifest.py
+      - Dockerfile.api
+      - Dockerfile.batch
+      - .github/workflows/cd.yaml
+      - reports/registry_transition.json
+      - reports/canary_report.json
+    outs:
+      - reports/deploy_manifest.json
+
+  monitor_drift:
+    cmd: python -X faulthandler -m creditrisk.monitoring.drift --config configs/creditrisk_pd.yaml
+    deps:
+      - configs/creditrisk_pd.yaml
       - src/creditrisk/config.py
       - src/creditrisk/monitoring/__init__.py
       - src/creditrisk/monitoring/drift.py
@@ -116,3 +162,16 @@ stages:
     outs:
       - reports/drift_report.json
       - reports/drift_report.html
+
+  canary_validation:
+    cmd: python -X faulthandler -m creditrisk.pipelines.canary_validation --config configs/creditrisk_pd.yaml --candidate-model models/creditrisk_pd_model.joblib --dataset data/processed/test.parquet --output reports/canary_report.json
+    deps:
+      - configs/creditrisk_pd.yaml
+      - src/creditrisk/config.py
+      - src/creditrisk/pipelines/canary_validation.py
+      - src/creditrisk/prediction/helpers.py
+      - src/creditrisk/pipelines/data_workflow.py
+      - models/creditrisk_pd_model.joblib
+      - data/processed/test.parquet
+    outs:
+      - reports/canary_report.json
